--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'com.android.application'
     id 'org.jetbrains.kotlin.android'
+    id 'com.google.gms.google-services'
 }
 
 android {
@@ -33,11 +34,38 @@ android {
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
+    //noinspection GradleDependency
+    implementation 'androidx.core:core-ktx:1.8.0'
+    //noinspection GradleDependency
     implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.7.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+
+    // Test
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
+
+    // Views (Material Design, Grid, Recycler, Cards, etc)
+    //noinspection GradleDependency
+    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'androidx.gridlayout:gridlayout:1.0.0'
+
+    // FireBase
+    //noinspection GradleDependency
+    implementation 'com.google.firebase:firebase-auth-ktx:21.0.6'
+    //noinspection GradleDependency
+    implementation 'com.google.firebase:firebase-auth:21.0.6'
+    //noinspection GradleDependency
+    implementation 'com.google.firebase:firebase-firestore-ktx:24.2.1'
+
+    // slideshow
+    implementation 'com.github.denzcoskun:ImageSlideshow:0.1.0'
+
+    // qrcode
+    implementation 'com.journeyapps:zxing-android-embedded:4.3.0@aar'
+    implementation 'com.google.zxing:core:3.4.1'
+
+    //justified text
+    implementation 'com.codesgood:justifiedtextview:2.0.1'
+
 }
