--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,13 +17,18 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/itacoatiara"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MeuRU"
         tools:targetApi="31">
-
         <activity
-            android:name=".MainActivity"
+            android:name=".ui.auth.LoginActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/LoginTheme"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
+            android:name=".ui.utils.SplashScreen"
             android:exported="true"
             android:screenOrientation="portrait"
+            android:theme="@style/SplashScreen"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
