--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,11 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
-            android:name=".LoadingDialog"
-            android:exported="false" />
+            android:name=".ui.home.MenuActivity"
+            android:exported="false"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.MeuRU.NoActionBar"
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".ui.auth.LoginActivity"
             android:exported="false"
