--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,8 +19,13 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
-            android:name=".TercaFeiraActivity"
-            android:exported="false" />
+            android:name=".services.cardapios.TercaFeiraActivity"
+            android:exported="true"
+            android:label="@string/toolbar_terca"
+            android:parentActivityName=".services.cardapios.DiasCardapioActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.MeuRU"
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".services.cardapios.DiasCardapioActivity"
             android:exported="true"
