--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,13 +19,21 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".services.cardapios.QuartaFeiraActivity"
+            android:exported="true"
+            android:label="@string/toolbar_quarta"
+            android:parentActivityName=".services.cardapios.DiasCardapioActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.MeuRU"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
             android:name=".services.cardapios.TercaFeiraActivity"
             android:exported="true"
             android:label="@string/toolbar_terca"
             android:parentActivityName=".services.cardapios.DiasCardapioActivity"
             android:screenOrientation="portrait"
             android:theme="@style/Theme.MeuRU"
-            tools:ignore="LockedOrientationActivity"/>
+            tools:ignore="LockedOrientationActivity" />
         <activity
             android:name=".services.cardapios.DiasCardapioActivity"
             android:exported="true"
