--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,14 @@
         android:supportsRtl="true"
         tools:targetApi="31">
         <activity
+            android:name=".services.cardapios.SextaFeiraActivity"
+            android:exported="true"
+            android:label="@string/toolbar_sexta"
+            android:parentActivityName=".services.cardapios.DiasCardapioActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.MeuRU"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
             android:name=".services.cardapios.DiasCardapioActivity"
             android:exported="true"
             android:label="@string/txt_tela_dias_semana"
