--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,14 @@
             android:theme="@style/Theme.MeuRU"
             tools:ignore="LockedOrientationActivity" />
         <activity
+            android:name=".services.cardapios.SegundaFeiraActivity"
+            android:exported="true"
+            android:label="@string/toolbar_segunda"
+            android:parentActivityName=".services.cardapios.DiasCardapioActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.MeuRU"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
             android:name=".services.cardapios.DiasCardapioActivity"
             android:exported="true"
             android:label="@string/txt_tela_dias_semana"
